Updating my blog post.

--- a/_posts/2017-04-11-its_alive.markdown
+++ b/_posts/2017-04-11-its_alive.markdown
@@ -4,7 +4,7 @@ title:  "It's ALIVE!"
 date:   2017-04-10 22:08:19 -0400
 ---
 
-## Building a CLI Gem
+# Building a CLI Gem
 
 ![It's ALIVE! - Young Frankenstein](http://i.imgur.com/2VwgBem.gif)
 
